--- a/TicketBookingApi/appsettings.json
+++ b/TicketBookingApi/appsettings.json
@@ -8,5 +8,12 @@
   "AllowedHosts": "*",
   "ConnectionStrings": {
     "DefaultConnection": "Server=localhost;Database=TicketBooking;Trusted_Connection=True;TrustServerCertificate=True;"
+  },
+  "Jwt":
+  {
+    "Key": "!my_Super_secret_Key_12345!",
+    "Issuer": "TicketBookingAuthServer",
+    "Audience": "TicketBookingApiUsers",
+    "ExpireMinutes": 60
   }
 }
