Added Authentication and Authorization

--- a/TicketBookingApi/appsettings.json
+++ b/TicketBookingApi/appsettings.json
@@ -11,7 +11,7 @@
   },
   "Jwt":
   {
-    "Key": "!my_Super_secret_Key_12345!",
+    "Key": "!MySuperSecretKey12345Th@tWillNeverBeF0und!",
     "Issuer": "TicketBookingAuthServer",
     "Audience": "TicketBookingApiUsers",
     "ExpireMinutes": 60
