Added dockerfile and docker-compose

--- a/TicketBookingApi/appsettings.json
+++ b/TicketBookingApi/appsettings.json
@@ -7,10 +7,10 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "DefaultConnection": "Server=localhost;Database=TicketBooking;Trusted_Connection=True;TrustServerCertificate=True;"
+    "DefaultConnection": "Server=localhost;Database=TicketBooking;Trusted_Connection=True;TrustServerCertificate=True;",
+    "DockerConnection": "Server=db;Database=TicketBooking;User=sa;Password=MyStrong@Passw0rd;TrustServerCertificate=True;"
   },
-  "Jwt":
-  {
+  "Jwt": {
     "Key": "!MySuperSecretKey12345Th@tWillNeverBeF0und!",
     "Issuer": "TicketBookingAuthServer",
     "Audience": "TicketBookingApiUsers",
